# ezDoorDecs

./: .gitignore  README.md  Residents_Presentation.pptx  clash_royale_card_urls.json  clash_royale_image_paths.csv  get_clash_royale_images.py  get_villager_images.py  main.py  pyproject.toml  pyrightconfig.json  residents.csv  villager_image_urls.json
adjusted_pptx/: MAIN_Adjusted_Residents_Presentation.pptx  adjust_pptx.py
